<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/_300dp"
    app:cardCornerRadius="@dimen/_20dp"
    android:layout_marginHorizontal="@dimen/_14dp"
    android:layout_marginVertical="@dimen/_8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8dp"
        android:background="@color/ebe1c6">

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="4"
            android:padding="@dimen/_12dp">

            <!-- Row Title -->
            <TextView
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/title"
                android:textStyle="bold"
                android:padding="@dimen/_4dp"
                android:textSize="@dimen/_23sp"
                android:fontFamily="@font/roboto"/>

            <TextView
                android:id="@+id/movieTextName"
                android:layout_row="0"
                android:layout_column="1"
                android:textSize="@dimen/_23sp"
                android:padding="@dimen/_4dp"
                android:fontFamily="@font/roboto"/>

            <!-- Row Studio -->
            <TextView
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/studio"
                android:textStyle="bold"
                android:padding="@dimen/_4dp"
                android:textSize="@dimen/_23sp"
                android:fontFamily="@font/roboto"/>

            <TextView
                android:id="@+id/studioTextName"
                android:layout_row="1"
                android:layout_column="1"
                android:padding="@dimen/_4dp"
                android:textSize="@dimen/_23sp"
                android:fontFamily="@font/roboto"/>

            <!-- Row Rating -->
            <TextView
                android:layout_row="2"
                android:layout_column="0"
                android:text="@string/rating"
                android:textStyle="bold"
                android:padding="@dimen/_4dp"
                android:textSize="@dimen/_23sp"
                android:fontFamily="@font/roboto"/>

            <TextView
                android:id="@+id/ratingTextName"
                android:layout_row="2"
                android:layout_column="1"
                android:padding="@dimen/_4dp"
                android:textSize="@dimen/_23sp"
                android:fontFamily="@font/roboto"/>

            <!-- Row Year -->
            <TextView
                android:layout_row="3"
                android:layout_column="0"
                android:text="@string/year"
                android:textStyle="bold"
                android:padding="@dimen/_4dp"
                android:textSize="@dimen/_23sp"
                android:fontFamily="@font/roboto"/>

            <TextView
                android:id="@+id/yearTextName"
                android:layout_row="3"
                android:layout_column="1"
                android:padding="@dimen/_4dp"
                android:textSize="@dimen/_23sp"
                android:fontFamily="@font/roboto"/>
        </GridLayout>

        <Button
            android:id="@+id/actionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:layout_below="@id/gridLayout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_8dp"
            android:padding="@dimen/_8dp"
            android:textSize="@dimen/_23sp"
            android:backgroundTint="@color/eab26c"
            android:fontFamily="@font/roboto"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>